--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Denny Peyerl - Beginner developer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="container">
+            <img class="profile-img" src="profile.jpeg">
             <h1>Denny Sulyvan Peyerl</h1>
             <p>Beginner developer</p>
         </div>
@@ -23,12 +25,10 @@
     <section id="skills">
         <div class="container">
             <h2>My habilities</h2>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Javascript</li>
-                <li>GitHub</li>
-            </ul>
+                <li><a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank">HTML</a></li>
+                <li><a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" targer="_blank">CSS</a></li>
+                <li><a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank">Javascript</a></li>
+                <li><a href="https://github.com" target="_blank">GitHub</a></li>
         </div>
     </section>
 
