--- a/index.html
+++ b/index.html
@@ -44,5 +44,7 @@
             <p>&copy; 2024 Denny S. Peyerl. Todos os direitos reservados.</p>
         </div>
     </footer>
+    <script src="script.js">
+    </script>
 </body>
 </html>
